objects/pse__Team_Schedule_Template_Slot__c.object
<CustomObject>
    <description>Template for team schedule slots.</description>
    <fields>
        <fullName>pse__End_Time__c</fullName>
        <description>The time at which the schedule slot ends.</description>
        <inlineHelpText>The time at which the schedule slot ends.</inlineHelpText>
        <label>End Time</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>pse__Start_End_Time</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Hours__c</fullName>
        <description>The number of hours required per resource in the schedule slot.</description>
        <inlineHelpText>The number of hours required per resource in the schedule slot.</inlineHelpText>
        <label>Hours</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Resources_Required__c</fullName>
        <description>The number of resources required for the schedule slot.</description>
        <inlineHelpText>The number of resources required for the schedule slot.</inlineHelpText>
        <label>Resources Required</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Start_Time__c</fullName>
        <description>The time at which the schedule slot begins.</description>
        <inlineHelpText>The time at which the schedule slot begins.</inlineHelpText>
        <label>Start Time</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>pse__Start_End_Time</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Team_Schedule_Slot_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Team Schedule Slot Type</label>
        <referenceTo>pse__Team_Schedule_Slot_Type__c</referenceTo>
        <relationshipLabel>Team Schedule Template Slots</relationshipLabel>
        <relationshipName>Team_Schedule_Template_Slots</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Team_Schedule_Template__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The team schedule template associated with this schedule slot.</description>
        <inlineHelpText>The team schedule template associated with this schedule slot.</inlineHelpText>
        <label>Team Schedule Template</label>
        <referenceTo>pse__Team_Schedule_Template__c</referenceTo>
        <relationshipLabel>Team Schedule Template Slots</relationshipLabel>
        <relationshipName>Team_Schedule_Template_Slots</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Team Schedule Template Slot</label>
    <nameField>
        <label>Team Schedule Template Slot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Team Schedule Template Slots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>pse__Hours_Must_Positive</fullName>
        <active>true</active>
        <description>Validation message indicating time slot hours must be non-negative increments of 0.25.</description>
        <errorConditionFormula>OR(pse__Hours__c &lt; 0 , MOD(pse__Hours__c ,0.25)  &lt;&gt; 0)</errorConditionFormula>
        <errorDisplayField>pse__Hours__c</errorDisplayField>
        <errorMessage>Hours should be non-negative values in increments of 0.25.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Resource_Should_Be_In_Range</fullName>
        <active>true</active>
        <description>Validation message indicating number of required resources on a time slot can be from 1 to 99.</description>
        <errorConditionFormula>OR(pse__Resources_Required__c &lt; 1,pse__Resources_Required__c &gt; 99)</errorConditionFormula>
        <errorDisplayField>pse__Resources_Required__c</errorDisplayField>
        <errorMessage>Number of Resources should be between 1 to 99.</errorMessage>
    </validationRules>
</CustomObject>